DD#3 Adding Back to Top button (for >1024) at the bottom of sections

--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,7 @@
                     </div>
                 </div>
             </div>
+            <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
         </div>
         <div class="section" id="expertise">
             <div class="row">
@@ -356,6 +357,7 @@
                     </div>
                 </div>
             </div>
+            <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
         </div>
         <div class="section" id="services">
             <div class="row">
@@ -427,6 +429,7 @@
                     <div class="clearfix map"><img src="images/services-map.png" alt="" /></div>
                 </div>
             </div>
+            <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
         </div>
         <div class="section" id="clients">
             <div class="row">
@@ -471,6 +474,7 @@
                     <img src="images/logo_gore.png" alt="Gore Creative Technologies Worldwide" />
                 </div>
             </div>
+            <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
         </div>
         <div class="section" id="publications">
             <div class="row">
@@ -614,6 +618,7 @@
                     </div>
                 </div>
             </div>
+            <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
         </div>
         <div class="section" id="contact">
             <div class="row">
@@ -657,7 +662,7 @@
             <div class="footer"><div class="row">
                 <div class="twenty columns">
                     <p>&copy; 2012 VasCore. All rights reserved.</p>
-                    <a href="#intro" id="scrolltotop">BACK <em>to</em> TOP</a>
+                    <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
                 </div>
             </div></div>
         </div>
