New bio images (both 1x and 2x) are in as Picturefills

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,19 @@
                         <div class="ten columns">
                             <a href="bio_michael-jaff.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_michael-jaff.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_michael-jaff.jpg"></div>
+                                        <div data-src="/images/photo_michael-jaff@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_michael-jaff.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_michael-jaff.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Michael R. Jaff, <span itemprop="honorificSuffix">D.O.</span></span><span itemprop="jobTitle">Founder and Director</span></p></figcaption>
                                 </figure>
                             </a>
@@ -96,7 +108,19 @@
                         <div class="ten columns">
                             <a href="bio_debra-jaff.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_debra-jaff.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_debra-jaff.jpg"></div>
+                                        <div data-src="/images/photo_debra-jaff@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_debra-jaff.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_debra-jaff.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Debra A. Jaff</span><span itemprop="jobTitle">Administrative Director</span></p></figcaption>
                                 </figure>
                             </a>
@@ -106,7 +130,19 @@
                         <div class="ten columns">
                             <a href="bio_gail-hadley.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_gail-hadley.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_gail-hadley.jpg"></div>
+                                        <div data-src="/images/photo_gail-hadley@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_gail-hadley.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_gail-hadley.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Gail L. Hadley, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Director</span></p>
                                     </figcaption>
                                 </figure>
@@ -115,7 +151,19 @@
                         <div class="ten columns">
                             <a href="bio_sandra-croteau.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_sandra-croteau.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_sandra-croteau.jpg"></div>
+                                        <div data-src="/images/photo_sandra-croteau@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_sandra-croteau.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_sandra-croteau.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Sandra M. Croteau, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Staff Interpreter</span></p></figcaption>
                                 </figure>
                             </a>
@@ -125,7 +173,19 @@
                         <div class="ten columns">
                             <a href="bio_josh-beckman.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_josh-beckman.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_josh-beckman.jpg"></div>
+                                        <div data-src="/images/photo_josh-beckman@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_josh-beckman.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_josh-beckman.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Joshua Beckman, MD</span><span itemprop="jobTitle">Physician Staff Interpreter</span></p></figcaption>
                                 </figure>
                             </a>
@@ -133,7 +193,19 @@
                         <div class="ten columns">
                             <a href="bio_victoria-sova.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_victoria-sova.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_victoria-sova.jpg"></div>
+                                        <div data-src="/images/photo_victoria-sova@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_victoria-sova.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_victoria-sova.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Victoria B. Sova, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Staff Interpreter</span></p></figcaption>
                                 </figure>
                             </a>
@@ -143,7 +215,19 @@
                         <div class="ten columns">
                             <a href="bio_susan-batdorf.html" class="reveal">
                                 <figure>
-                                    <img src="images/photo_susan-batdorf.jpg" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_susan-batdorf.jpg"></div>
+                                        <div data-src="/images/photo_susan-batdorf@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_susan-batdorf.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_susan-batdorf.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Susan M. Batdorf</span><span itemprop="jobTitle">Quality Auditor</span></p></figcaption>
                                 </figure>
                             </a>
@@ -151,7 +235,19 @@
                         <div class="ten columns">
                             <a href="bio_mary-ramos.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_mary-ramos.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_mary-ramos.jpg"></div>
+                                        <div data-src="/images/photo_mary-ramos@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_mary-ramos.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_mary-ramos.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Mary Ramos</span><span itemprop="jobTitle">Office Administrator</span></p></figcaption>
                                 </figure>
                             </a>
@@ -161,7 +257,19 @@
                         <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
-                                    <img src="/images/photo_justin-mcneil.jpg" alt="" />
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_justin-mcneil.jpg"></div>
+                                        <div data-src="/images/photo_justin-mcneil@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_justin-mcneil.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_justin-mcneil.jpg" alt="" />
+                                        </noscript>
+                                    </div>
                                     <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Administrative Staff</span></p></figcaption>
                                 </figure>
                             </a>
