Updated email address in contact panel, updated Typekit reference to Vascore's account

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <meta name="viewport" content="width=device-width" />
 
-    <script type="text/javascript" src="//use.typekit.net/lyf6dbd.js"></script>
+    <script type="text/javascript" src="//use.typekit.net/ncj1rzb.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
     <script src="js/modernizr-2.6.2-min.js"></script>
@@ -763,7 +763,7 @@
                 <div class="six columns" id="email">
                 	<h3>Email</h3>
                     <div class="contact-info">
-                    	<p><span><a href="mailto:mghvascore@partners.org" itemprop="email">mghvascore@partners.org</a></span></p>
+                    	<p><span><a href="mailto:mghvascoreinfo@partners.org" itemprop="email">mghvascoreinfo@partners.org</a></span></p>
                     </div>
                 </div>
             </div>
