logo dropped in

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     <div class="masthead">
         <div class="row" role="banner">
             <div class="three columns logo">
-                <a href="#intro"><img src="images/logo_vascore.png" alt="Vascore" /></a>
+                <a href="#intro"><img src="images/vascore-logo.png" alt="Vascore" /></a>
             </div>
             <div class="seventeen columns nav">
                 <div role="navigation">
@@ -492,6 +492,7 @@
                         <li><span>Bare metal stents</span></li>
                         <li><span>Drug-eluting stents</span></li>
                         <li><span>Fabric-coated stents</span></li>
+                        <li><span>Dialysis Access Grafts/Fistulae</span></li>
                     </ul><ul>
                         <li><span>Bioresorbable stents</span></li>
                         <li><span>Atherectomy devices</span></li>
