Fixes DD #14 (new logo swap and sizing)

--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@
 <body>
     <div class="masthead">
         <div class="row" role="banner">
-            <div class="three columns logo">
+            <div class="four columns logo">
                 <a href="#intro"><img src="images/vascore-logo.png" alt="Vascore" /></a>
             </div>
-            <div class="seventeen columns nav">
+            <div class="sixteen columns nav">
                 <div role="navigation">
                     <a href="#about">About</a>
                     <a href="#expertise">Expertise</a>
