--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,21 @@
     <div class="masthead">
         <div class="row" role="banner">
             <div class="four columns logo">
-                <a href="#intro"><img src="images/vascore-logo.png" alt="Vascore" /></a>
+                <a href="#intro">
+                    <div data-picture data-alt="Vascore" class="">
+                        <div data-src="/images/vascore-logo.png"></div>
+                        <div data-src="/images/vascore-logo@2x.png" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                        <!--[if (lt IE 10) & (!IEMobile)]>
+                        <div data-src="/images/vascore-logo.png"></div>
+                        <![endif]-->
+
+                        <!-- Fallback content for non-JS browsers. -->
+                        <noscript>
+                            <img src="/images/vascore-logo.png" alt="" />
+                        </noscript>
+                    </div>
+                </a>
             </div>
             <div class="sixteen columns nav">
                 <div role="navigation">
