Adding slide title to slides, moving View Images button to the right, adjusting layout for all widths, adjusting heights of all slideshows

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <![endif]-->
 
     <!--[if gte IE 8]><!-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/styles.css" />
     <!-- <![endif]-->
 
@@ -328,27 +328,30 @@
                                 <div class="circle challenge">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Challenge</h4>
+                                        <h5>Challenge</h5>
                                         <p>A sponsor wants to design a clinical trial to result in approval of their iliac artery stent by the US Food and Drug Administration.</p>
                                     </div>
                                 </div>
                                 <div class="circle solution">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Solution</h4>
+                                        <h5>Solution</h5>
                                         <p>We designed the duplex ultrasound imaging protocol and trained the sites in the performance of this imaging protocol.</p>
                                     </div>
                                 </div>
                                 <div class="circle result resultbig">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Result</h4>
+                                        <h5>Result</h5>
                                         <p>First Iliac Artery Stent Approved in the U.S.</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="slideactions">
-                                <a href="casestudy1_image1.html" class="btn reveal">View Trial Images</a>
+                            <div class="slidemeta">
+                                <h4 class="slidetitle"><span>1.</span> First Iliac Artery Stent Approved in the U.S.</h4>
+                                <div class="slideactions">
+                                    <a href="casestudy1_image1.html" class="btn reveal">View Trial Images</a>
+                                </div>
                             </div>
                         </div>
 
@@ -358,27 +361,30 @@
                                 <div class="circle challenge">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Challenge</h4>
+                                        <h5>Challenge</h5>
                                         <p>Carotid artery stenting comes on to the US scene, with the first multicenter high risk carotid stent protocol.</p>
                                     </div>
                                 </div>
                                 <div class="circle solution">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Solution</h4>
+                                        <h5>Solution</h5>
                                         <p>We develop a common duplex ultrasound protocol for this trial.</p>
                                     </div>
                                 </div>
                                 <div class="circle result">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Result</h4>
+                                        <h5>Result</h5>
                                         <p>First Major Publication of Carotid Stent vs Carotid Endarterectomy</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="slideactions">
-                                <a href="casestudy2_image1.html" class="btn reveal">View Trial Images</a>
+                            <div class="slidemeta">
+                                <h4 class="slidetitle"><span>2.</span> First Major Publication of Carotid Stent vs. Carotid Endarterectomy</h4>
+                                <div class="slideactions">
+                                    <a href="casestudy2_image1.html" class="btn reveal">View Trial Images</a>
+                                </div>
                             </div>
                         </div>
 
@@ -388,27 +394,30 @@
                                 <div class="circle challenge">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Challenge</h4>
+                                        <h5>Challenge</h5>
                                         <p>Renal artery duplex ultrasonography, one of the most challenging clinical examinations, is an ideal surveillance study for stents in clinical trials.</p>
                                     </div>
                                 </div>
                                 <div class="circle solution">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Solution</h4>
+                                        <h5>Solution</h5>
                                         <p>We run such a trial where duplex ultrasonography is the primary endpoint modality.</p>
                                     </div>
                                 </div>
                                 <div class="circle result">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Result</h4>
+                                        <h5>Result</h5>
                                         <p>Approval of Renal Artery Stent Based on Duplex Ultrasonography</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="slideactions">
-                                <a href="casestudy3_image1.html" class="btn reveal">View Trial Images</a>
+                            <div class="slidemeta">
+                                <h4 class="slidetitle"><span>3.</span> Approval of Renal Artery Stent Based on Duplex Ultrasonography</h4>
+                                <div class="slideactions">
+                                    <a href="casestudy3_image1.html" class="btn reveal">View Trial Images</a>
+                                </div>
                             </div>
                         </div>
 
@@ -418,27 +427,30 @@
                                 <div class="circle challenge">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Challenge</h4>
+                                        <h5>Challenge</h5>
                                         <p>Fractures of stents has become a significant concern for manufacturers, physicians, and regulatory groups.</p>
                                     </div>
                                 </div>
                                 <div class="circle solution">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Solution</h4>
+                                        <h5>Solution</h5>
                                         <p>We helped develop the appropriate methods to study and report stent fractures.</p>
                                     </div>
                                 </div>
                                 <div class="circle result">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Result</h4>
+                                        <h5>Result</h5>
                                         <p>The accepted definition of stent fracture types established</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="slideactions">
-                                <a href="casestudy4_image1.html" class="btn reveal">View Trial Images</a>
+                            <div class="slidemeta">
+                                <h4 class="slidetitle"><span>4.</span> The Accepted Definition of Stent Fracture Types</h4>
+                                <div class="slideactions">
+                                    <a href="casestudy4_image1.html" class="btn reveal">View Trial Images</a>
+                                </div>
                             </div>
                         </div>
 
@@ -448,27 +460,30 @@
                                 <div class="circle challenge">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Challenge</h4>
+                                        <h5>Challenge</h5>
                                         <p>Drug eluting stents hold great potential for treatment of peripheral artery disease.</p>
                                     </div>
                                 </div>
                                 <div class="circle solution">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Solution</h4>
+                                        <h5>Solution</h5>
                                         <p>We developed and validated the process of ultrasound surveillance of endovascular stents in the superficial femoral artery.</p>
                                     </div>
                                 </div>
                                 <div class="circle result">
                                     <img src="images/circle_placeholder.gif" alt="" />
                                     <div class="circlecontent">
-                                        <h4>Result</h4>
+                                        <h5>Result</h5>
                                         <p>The First Positive Study of Drug Eluting Stents in the Superficial Femoral Arteries</p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="slideactions">
-                                <a href="casestudy5_image1.html" class="btn reveal">View Trial Images</a>
+                            <div class="slidemeta">
+                                <h4 class="slidetitle"><span>5.</span> The First Positive Study of Drug Eluting Stents in the Superficial Femoral Arteries</h4>
+                                <div class="slideactions">
+                                    <a href="casestudy5_image1.html" class="btn reveal">View Trial Images</a>
+                                </div>
                             </div>
                         </div>
 
