Adjustments to the Case Study modal windows

--- a/public/casestudy1_image1.html
+++ b/public/casestudy1_image1.html
@@ -1,7 +1,6 @@
 <div class="modalinner">
     <div class="modalheader csheader clearfix">
-        <p class="title">Case Study 1 Images:</p>
-        <h2>First Iliac Artery Stent Approved in the U.S.</h2>
+        <h2><span>1.</span> First Iliac Artery Stent Approved in the U.S.</h2>
     </div>
     <div class="modalcontent cscontent clearfix">
         <img src="images/casestudy1_image1.jpg" alt="" />
