--- a/public/casestudy5_image1.html
+++ b/public/casestudy5_image1.html
@@ -1,7 +1,6 @@
 <div class="modalinner">
     <div class="modalheader csheader clearfix">
-        <p class="title">Case Study 5 Image:</p>
-        <h2>The First Positive Study of Drug Eluting Stents in the Superficial Femoral Arteries</h2>
+        <h2><span>5.</span> The First Positive Study of Drug Eluting Stents in the Superficial Femoral Arteries</h2>
     </div>
     <div class="modalcontent cscontent clearfix">
         <img src="images/casestudy5_image1.jpg" alt="" />
