--- a/public/casestudy4_image2.html
+++ b/public/casestudy4_image2.html
@@ -1,7 +1,6 @@
 <div class="modalinner">
     <div class="modalheader csheader clearfix">
-        <p class="title">Case Study 4 Images:</p>
-        <h2>The Accepted Definition of Stent Fracture Types</h2>
+        <h2><span>4.</span> The Accepted Definition of Stent Fracture Types</h2>
     </div>
     <div class="modalcontent cscontent clearfix">
         <img src="images/casestudy4_image2.jpg" alt="" />
