New Vascore logo, masthead height tweaked, new small Expertise circles at 480, removed two client logos

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 <body>
     <div class="masthead">
         <div class="row" role="banner">
-            <div class="four columns logo">
+            <div class="eight columns logo">
                 <a href="#intro">
                     <div data-picture data-alt="Vascore" class="">
                         <div data-src="/images/vascore-logo.png"></div>
@@ -57,7 +57,7 @@
                     </div>
                 </a>
             </div>
-            <div class="sixteen columns nav">
+            <div class="twelve columns nav">
                 <div role="navigation">
                     <a href="#about">About</a>
                     <a href="#expertise">Expertise</a>
@@ -594,7 +594,6 @@
                     <img src="images/logo_cordis.png" alt="Cordis: a Johnson + Johnson company" />
                     <img src="images/logo_covidien.png" alt="Covidien" />
                     <img src="images/logo_cvingenuity.png" alt="CVIngenuity" />
-                    <img src="images/logo_daiichi-sankyo.png" alt="Daiichi-Sankyo" />
                     <img src="images/logo_flexible-stenting-solutions.png" alt="Flexible Stenting Solutions" />
                     <img src="images/logo_getinge-group.png" alt="Getinge Group" />
                     <img src="images/logo_idev.png" alt="IDEV" />
@@ -609,7 +608,6 @@
                     <img src="images/logo_terumo.png" alt="Terumo" />
                     <img src="images/logo_theravasc.png" alt="Theravasc" />
                     <img src="images/logo_vessix-vascular.png" alt="Vessix Vascular" />
-                    <img src="images/logo_gore.png" alt="Gore Creative Technologies Worldwide" />
                 </div>
             </div>
             <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
