Updated tweaks to main logo, client logo, and expertise section

--- a/public/casestudy1_image2.html
+++ b/public/casestudy1_image2.html
@@ -1,6 +1,6 @@
 <div class="modalinner">
     <div class="modalheader csheader clearfix">
-        <h2><span>1.</span> First Iliac Artery Stent Approved in the U.S.</h2>
+        <h2>First Iliac Artery Stent Approved in the U.S.</h2>
     </div>
     <div class="modalcontent cscontent clearfix">
         <img src="images/casestudy1_image2.jpg" alt="" />
