--- a/public/casestudy3_image1.html
+++ b/public/casestudy3_image1.html
@@ -1,6 +1,6 @@
 <div class="modalinner">
     <div class="modalheader csheader clearfix">
-        <h2><span>3.</span> Approval of Renal Artery Stent Based on Duplex Ultrasonography</h2>
+        <h2>Approval of Renal Artery Stent Based on Duplex Ultrasonography</h2>
     </div>
     <div class="modalcontent cscontent clearfix">
         <img src="images/casestudy3_image1.jpg" alt="" />
