--- a/public/casestudy2_image1.html
+++ b/public/casestudy2_image1.html
@@ -1,6 +1,6 @@
 <div class="modalinner">
     <div class="modalheader csheader clearfix">
-        <h2><span>2.</span> First Major Publication of Carotid Stent vs. Carotid Endarterectomy</h2>
+        <h2>First Major Publication of Carotid Stent vs. Carotid Endarterectomy</h2>
     </div>
     <div class="modalcontent cscontent clearfix">
         <img src="images/casestudy2_image1.jpg" alt="" />
