--- a/public/casestudy4_image1.html
+++ b/public/casestudy4_image1.html
@@ -1,6 +1,6 @@
 <div class="modalinner">
     <div class="modalheader csheader clearfix">
-        <h2><span>4.</span> The Accepted Definition of Stent Fracture Types</h2>
+        <h2>The Accepted Definition of Stent Fracture Types</h2>
     </div>
     <div class="modalcontent cscontent clearfix">
         <img src="images/casestudy4_image1.jpg" alt="" />
