--- a/public/index.html
+++ b/public/index.html
@@ -42,19 +42,7 @@
         <div class="row" role="banner">
             <div class="eight columns logo">
                 <a href="#intro">
-                    <div data-picture data-alt="Vascore" class="">
-                        <div data-src="/images/vascore-logo.png"></div>
-                        <div data-src="/images/vascore-logo@2x.png" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                        <!--[if (lt IE 10) & (!IEMobile)]>
-                        <div data-src="/images/vascore-logo.png"></div>
-                        <![endif]-->
-
-                        <!-- Fallback content for non-JS browsers. -->
-                        <noscript>
-                            <img src="/images/vascore-logo.png" alt="" />
-                        </noscript>
-                    </div>
+                    <img src="/images/vascore-logo@2x.png" alt="Vascore" />
                 </a>
             </div>
             <div class="twelve columns nav">
@@ -323,6 +311,7 @@
                     <div class="slides twenty columns centered">
 
                         <div class="slide">
+                            <h4 class="slidetitle">First Iliac Artery Stent Approved in the U.S.</h4>
                             <div class="infographic">
                                 <img src="images/bg_infographic_circles.png" alt="" />
                                 <div class="circle challenge">
@@ -347,15 +336,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="slidemeta">
-                                <h4 class="slidetitle"><span>1.</span> First Iliac Artery Stent Approved in the U.S.</h4>
-                                <div class="slideactions">
-                                    <a href="casestudy1_image1.html" class="btn reveal">View Trial Images</a>
-                                </div>
+                            <div class="slideactions">
+                                <a href="casestudy1_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
 
                         <div class="slide">
+                            <h4 class="slidetitle">First Major Publication of Carotid Stent vs. Carotid Endarterectomy</h4>
                             <div class="infographic">
                                 <img src="images/bg_infographic_circles.png" alt="" />
                                 <div class="circle challenge">
@@ -380,15 +367,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="slidemeta">
-                                <h4 class="slidetitle"><span>2.</span> First Major Publication of Carotid Stent vs. Carotid Endarterectomy</h4>
-                                <div class="slideactions">
-                                    <a href="casestudy2_image1.html" class="btn reveal">View Trial Images</a>
-                                </div>
+                            <div class="slideactions">
+                                <a href="casestudy2_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
 
                         <div class="slide">
+                            <h4 class="slidetitle">Approval of Renal Artery Stent Based on Duplex Ultrasonography</h4>
                             <div class="infographic">
                                 <img src="images/bg_infographic_circles.png" alt="" />
                                 <div class="circle challenge">
@@ -413,15 +398,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="slidemeta">
-                                <h4 class="slidetitle"><span>3.</span> Approval of Renal Artery Stent Based on Duplex Ultrasonography</h4>
-                                <div class="slideactions">
-                                    <a href="casestudy3_image1.html" class="btn reveal">View Trial Images</a>
-                                </div>
+                            <div class="slideactions">
+                                <a href="casestudy3_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
 
                         <div class="slide">
+                            <h4 class="slidetitle">The Accepted Definition of Stent Fracture Types</h4>
                             <div class="infographic">
                                 <img src="images/bg_infographic_circles.png" alt="" />
                                 <div class="circle challenge">
@@ -446,15 +429,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="slidemeta">
-                                <h4 class="slidetitle"><span>4.</span> The Accepted Definition of Stent Fracture Types</h4>
-                                <div class="slideactions">
-                                    <a href="casestudy4_image1.html" class="btn reveal">View Trial Images</a>
-                                </div>
+                            <div class="slideactions">
+                                <a href="casestudy4_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
 
                         <div class="slide">
+                            <h4 class="slidetitle">The First Positive Study of Drug Eluting Stents in the Superficial Femoral Arteries</h4>
                             <div class="infographic">
                                 <img src="images/bg_infographic_circles.png" alt="" />
                                 <div class="circle challenge">
@@ -479,11 +460,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="slidemeta">
-                                <h4 class="slidetitle"><span>5.</span> The First Positive Study of Drug Eluting Stents in the Superficial Femoral Arteries</h4>
-                                <div class="slideactions">
-                                    <a href="casestudy5_image1.html" class="btn reveal">View Trial Images</a>
-                                </div>
+                            <div class="slideactions">
+                                <a href="casestudy5_image1.html" class="btn reveal">View Trial Images</a>
                             </div>
                         </div>
 
@@ -587,13 +565,14 @@
                     <img src="images/logo_bard.png" alt="BARD" />
                     <img src="images/logo_biotronik.png" alt="Biotronik" />
                     <img src="images/logo_boston-scientific.png" alt="Boston Scientific" />
-                    <img src="images/logo_cardiosonics.png" alt="Cardiosonics" />
+                    <img src="images/logo_cardiosonic.png" alt="Cardiosonic" />
                     <img src="images/logo_csi.png" alt="CSI" />
                     <img src="images/logo_cardiva.png" alt="Cardiva Medical, Inc" />
                     <img src="images/logo_cook-medical.png" alt="Cook Medical" />
                     <img src="images/logo_cordis.png" alt="Cordis: a Johnson + Johnson company" />
                     <img src="images/logo_covidien.png" alt="Covidien" />
                     <img src="images/logo_cvingenuity.png" alt="CVIngenuity" />
+                    <img src="images/blank.gif" class="spacer" alt="" />
                     <img src="images/logo_flexible-stenting-solutions.png" alt="Flexible Stenting Solutions" />
                     <img src="images/logo_getinge-group.png" alt="Getinge Group" />
                     <img src="images/logo_idev.png" alt="IDEV" />
