--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,8 @@
             <div class="row">
                 <div class="fifteen columns centered">
                     <p class="intro">Having a full-time, highly-experienced and consistent staff who aren&rsquo;t constantly shifting roles allows us to ensure smooth, efficient and accurate evaluations. Our team consists of fully-certified physicians, technologists and nurses, along with quality officers with a vast knowledge of regulatory guidelines &mdash; all committed to navigating you to a successful approval.</p>
+
+                    <p class="intro">We have the highest commitment to quality performance and improvement.  We seek advice and insight from external quality assurance consultants from Boston Biomedical Associates, renowned leaders in quality oversight and assurance. BBA conducts routine internal audits of our quality systems and standard operating procedures. We actively monitor our performance and make regular improvements to ensure that we have industry leading quality processes.</p>
                 </div>
             </div>
             <div class="row">
@@ -123,12 +125,32 @@
                                             <img src="/images/photo_debra-jaff.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Debra A. Jaff</span><span itemprop="jobTitle">Administrative Director</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Debra A. Jaff</span><span itemprop="jobTitle">Business Manager</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
                     </div>
                     <div class="row">
+                        <div class="ten columns">
+                            <a href="bio_kathryn-mccullough.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_katie-mccullough.jpg"></div>
+                                        <div data-src="/images/photo_katie-mccullough@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_katie-mccullough.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_katie-mccullough.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Kathryn Y. McCullough, MS</span><span itemprop="jobTitle">Administrative Director</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
                         <div class="ten columns">
                             <a href="bio_gail-hadley.html" class="reveal">
                                 <figure>
@@ -150,6 +172,8 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_sandra-croteau.html" class="reveal">
                                 <figure>
@@ -170,8 +194,6 @@
                                 </figure>
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_josh-beckman.html" class="reveal">
                                 <figure>
@@ -192,6 +214,8 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="ten columns">
                             <a href="bio_victoria-sova.html" class="reveal">
                                 <figure>
@@ -209,28 +233,6 @@
                                         </noscript>
                                     </div>
                                     <figcaption><p><span itemprop="name">Victoria B. Sova, <span itemprop="honorificSuffix">RN</span>, <span itemprop="honorificSuffix">RVT</span></span><span itemprop="jobTitle">Technical Staff Interpreter</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="ten columns">
-                            <a href="bio_susan-batdorf.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_susan-batdorf.jpg"></div>
-                                        <div data-src="/images/photo_susan-batdorf@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_susan-batdorf.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_susan-batdorf.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Susan M. Batdorf</span><span itemprop="jobTitle">Quality Auditor</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -277,7 +279,24 @@
                             </a>
                         </div>
                         <div class="ten columns">
+                            <a href="bio_chris-luongo.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_chris-luongo.jpg"></div>
+                                        <div data-src="/images/photo_chris-luongo@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
 
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_chris-luongo.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_chris-luongo.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Chris Luongo</span><span itemprop="jobTitle">Administrative Staff</span></p></figcaption>
+                                </figure>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -710,9 +729,9 @@
                         </div>
                         <div class="slide"> <!-- Slide 3 -->
                             <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/16139124" target="_blank">Evaluation of the safety and efficacy of renal artery stenting after unsuccessful balloon angioplasty: The ASPIRE-2 Study.</a></h3>
-                            <p class="date">2004 Oct 7;351(15):1493-501</p>
-                            <h4>New England Journal of Medicine</h4>
-                            <p>Yadav JS, Wholey MH, Kuntz RE, Fayad P, Katzen BT, Mishkel GJ, Bajwa TK, Whitlow P, Strickman NE, <b>Jaff MR</b>, Popma JJ, Snead DB, Firth BG, Ouriel K.</p>
+                            <p class="date">2005 Sep 6;46(5):776-83</p>
+                            <h4>Journal of the American College of Cardiology</h4>
+                            <p>Rocha-Singh K, <b>Jaff MR</b>, Rosenfield K; ASPIRE-2 Trial Investigators</p>
                         </div>
                         <div class="slide"> <!-- Slide 2 -->
                             <h3><a href="http://www.ncbi.nlm.nih.gov/pubmed/15470212" target="_blank">Protected carotid artery stenting vs endarterectomy in high-risk patients</a></h3>
@@ -775,7 +794,7 @@
             </div>
             <div class="footer"><div class="row">
                 <div class="twenty columns">
-                    <p>&copy; 2012 VasCore. All rights reserved.</p>
+                    <p>&copy; 2013 VasCore. All rights reserved.</p>
                     <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
                 </div>
             </div></div>
