Updating Katie's photo, Debra's bio (title inside the copy), and new About text

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,10 @@
                 <div class="fifteen columns centered">
                     <p class="intro">Having a full-time, highly-experienced and consistent staff who aren&rsquo;t constantly shifting roles allows us to ensure smooth, efficient and accurate evaluations. Our team consists of fully-certified physicians, technologists and nurses, along with quality officers with a vast knowledge of regulatory guidelines &mdash; all committed to navigating you to a successful approval.</p>
 
-                    <p class="intro">We have the highest commitment to quality performance and improvement.  We seek advice and insight from external quality assurance consultants from Boston Biomedical Associates, renowned leaders in quality oversight and assurance. BBA conducts routine internal audits of our quality systems and standard operating procedures. We actively monitor our performance and make regular improvements to ensure that we have industry leading quality processes.</p>
+                    <p class="intro">
+                        <b>Quality/Consistency/Reliability</b><br />
+                        We have the highest commitment to quality performance and improvement.  We work closely with external quality assurance experts from Boston Biomedical Associates, renowned leaders in quality oversight and assurance. BBA conducts routine internal audits of our quality systems and standard operating procedures. We actively monitor our performance and make regular improvements to ensure that we continue to practice using industry leading quality processes.
+                    </p>
                 </div>
             </div>
             <div class="row">
