--- a/public/index.html
+++ b/public/index.html
@@ -240,28 +240,6 @@
                             </a>
                         </div>
                         <div class="ten columns">
-                            <a href="bio_mary-ramos.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_mary-ramos.jpg"></div>
-                                        <div data-src="/images/photo_mary-ramos@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_mary-ramos.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_mary-ramos.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Mary Ramos</span><span itemprop="jobTitle">Office Administrator</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
                                     <div data-picture data-alt="" class="">
@@ -277,10 +255,14 @@
                                             <img src="/images/photo_justin-mcneil.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Administrative Staff</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Justin McNeil</span><span itemprop="jobTitle">Project Manager</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
+                        
+                    </div>
+                    <div class="row">
+                        
                         <div class="ten columns">
                             <a href="bio_chris-luongo.html" class="reveal">
                                 <figure>
@@ -297,7 +279,7 @@
                                             <img src="/images/photo_chris-luongo.jpg" alt="" />
                                         </noscript>
                                     </div>
-                                    <figcaption><p><span itemprop="name">Chris Luongo</span><span itemprop="jobTitle">Administrative Staff</span></p></figcaption>
+                                    <figcaption><p><span itemprop="name">Chris Luongo</span><span itemprop="jobTitle">Project Manager</span></p></figcaption>
                                 </figure>
                             </a>
                         </div>
