Trying to fix Safari footer bug

--- a/public/index.html
+++ b/public/index.html
@@ -756,12 +756,14 @@
                     </div>
                 </div>
             </div>
-            <div class="footer"><div class="row">
-                <div class="twenty columns">
-                    <p>&copy; 2013 VasCore. All rights reserved.</p>
-                    <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
+            <div class="footer">
+                <div class="row">
+                    <div class="twenty columns">
+                        <p>&copy; 2013 VasCore. All rights reserved.</p>
+                        <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
+                    </div>
                 </div>
-            </div></div>
+            </div>
         </div>
     </div>
 
