--- a/public/index-bak.html
+++ b/public/index-bak.html
@@ -11,7 +11,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Vascore</title>
+    <title>VasCore - The Vascular Ultrasound Core Laboratory - A division the MGPO - Massachusetts General Hospital - Boston, MA</title>
 
     <!-- enable HTML5 elements in IE7+8 -->
     <!--[if lt IE 9]>
@@ -219,6 +219,29 @@
                                 </figure>
                             </a>
                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="ten columns">
+                            <a href="bio_erin-lacey.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_erin-lacey.jpg"></div>
+                                        <div data-src="/images/photo_erin-lacey@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_erin-lacey.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_erin-lacey.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Erin Lacey</span><span itemprop="jobTitle">Office Manager</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+
                         <div class="ten columns">
                             <a href="bio_justin-mcneil.html" class="reveal">
                                 <figure>
@@ -239,28 +262,7 @@
                                 </figure>
                             </a>
                         </div>
-                        <div class="ten columns">
-                            <a href="bio_chris-luongo.html" class="reveal">
-                                <figure>
-                                    <div data-picture data-alt="" class="">
-                                        <div data-src="/images/photo_chris-luongo.jpg"></div>
-                                        <div data-src="/images/photo_chris-luongo@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
-
-                                        <!--[if (lt IE 10) & (!IEMobile)]>
-                                        <div data-src="/images/photo_chris-luongo.jpg"></div>
-                                        <![endif]-->
-
-                                        <!-- Fallback content for non-JS browsers. -->
-                                        <noscript>
-                                            <img src="/images/photo_chris-luongo.jpg" alt="" />
-                                        </noscript>
-                                    </div>
-                                    <figcaption><p><span itemprop="name">Chris Luongo</span><span itemprop="jobTitle">Project Manager</span></p></figcaption>
-                                </figure>
-                            </a>
-                        </div>
                     </div>
-
                 </div>
             </div>
             <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
@@ -777,5 +779,15 @@
 	  })();
 
 	</script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-54887156-1', 'auto');
+    ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
