--- a/public/index.html
+++ b/public/index.html
@@ -263,6 +263,28 @@
                             </a>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="ten columns">
+                            <a href="bio_ritu-shrestha.html" class="reveal">
+                                <figure>
+                                    <div data-picture data-alt="" class="">
+                                        <div data-src="/images/photo_ritu-shrestha.jpg"></div>
+                                        <div data-src="/images/photo_ritu-shrestha@2x.jpg" data-media="(min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 13/10), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 124.8dpi), (min-resolution: 1.3dppx)"></div>
+
+                                        <!--[if (lt IE 10) & (!IEMobile)]>
+                                        <div data-src="/images/photo_ritu-shrestha.jpg"></div>
+                                        <![endif]-->
+
+                                        <!-- Fallback content for non-JS browsers. -->
+                                        <noscript>
+                                            <img src="/images/photo_ritu-shrestha.jpg" alt="" />
+                                        </noscript>
+                                    </div>
+                                    <figcaption><p><span itemprop="name">Ritu Shrestha</span><span itemprop="jobTitle">Staff Assistant</span></p></figcaption>
+                                </figure>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
@@ -756,14 +778,12 @@
                     </div>
                 </div>
             </div>
-            <div class="footer">
-                <div class="row">
-                    <div class="twenty columns">
-                        <p>&copy; 2013 VasCore. All rights reserved.</p>
-                        <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
-                    </div>
+            <div class="footer"><div class="row">
+                <div class="twenty columns">
+                    <p>&copy; 2013 VasCore. All rights reserved.</p>
+                    <a href="#intro" class="scrolltotop">BACK <em>to</em> TOP</a>
                 </div>
-            </div>
+            </div></div>
         </div>
     </div>
 
@@ -781,5 +801,15 @@
 	  })();
 
 	</script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-54887156-1', 'auto');
+    ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
